--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@
 	width:200px;
 	background-color:purple;
 	border-left-color:green;
-	border:5px;
+	border-left:5px;
 	padding:10px;
 }
-.heading{
+#heading{
 	font-size:20px;
 	color:white;
 	text-decoration:underline;
